[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Scripts/audio.gd" type="Script" id=1]

[node name="PopupPanel" type="PopupPanel"]
visible = true
margin_right = 250.0
margin_bottom = 400.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 246.0
margin_bottom = 396.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer2" type="VSplitContainer" parent="MarginContainer"]
margin_right = 242.0
margin_bottom = 392.0
split_offset = 25

[node name="ExitButton" type="Button" parent="MarginContainer/VSplitContainer2"]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VSplitContainer2"]
margin_top = 57.0
margin_right = 242.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VSplitContainer2/MarginContainer2"]
margin_right = 242.0
margin_bottom = 335.0
split_offset = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer2/MarginContainer2/VSplitContainer"]
margin_right = 242.0
margin_bottom = 47.0

[node name="MusicLabel" type="Label" parent="MarginContainer/VSplitContainer2/MarginContainer2/VSplitContainer/VBoxContainer"]
margin_right = 242.0
margin_bottom = 14.0
text = "Music Volume"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VSplitContainer2/MarginContainer2/VSplitContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 242.0
margin_bottom = 34.0
min_value = -80.0
max_value = 0.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VSplitContainer2/MarginContainer2/VSplitContainer"]
margin_top = 59.0
margin_right = 242.0
margin_bottom = 335.0

[node name="SfxLabel" type="Label" parent="MarginContainer/VSplitContainer2/MarginContainer2/VSplitContainer/VBoxContainer2"]
margin_right = 242.0
margin_bottom = 14.0
text = "Sound Effects Volume"
align = 1
valign = 1

[node name="SfxSlider" type="HSlider" parent="MarginContainer/VSplitContainer2/MarginContainer2/VSplitContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 242.0
margin_bottom = 34.0
min_value = -80.0
max_value = 0.0
[connection signal="pressed" from="MarginContainer/VSplitContainer2/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="value_changed" from="MarginContainer/VSplitContainer2/MarginContainer2/VSplitContainer/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VSplitContainer2/MarginContainer2/VSplitContainer/VBoxContainer2/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
